@@ -1,5 +1,15 @@
 <!-- $Id$ -->
 <html>
   <body>
+    <pre><!-- Empty first sentence --></pre>
+    <h1>POM Coordinates</h1>
+    <p>{@pom.coordinates}</p>
+    <h1>
+      <a href="https://docs.spring.io/spring-boot/docs/current/reference/htmlsingle/">
+        Spring Boot
+      </a>
+      Artifacts
+    </h1>
+    <p>{@include /application.properties}</p>
   </body>
 </html>
