@@ -1,21 +1,0 @@
-# $Id$
-
-velocity.debug = false
-
-resource.loader = class
-class.resource.loader.class = \
-    org.apache.velocity.runtime.resource.loader.ClasspathResourceLoader
-
-velocimacro.arguments.strict = true
-#velocimacro.library = /WEB-INF/VM_global_library.vm
-#velocimacro.permissions.allow.inline = true
-#velocimacro.permissions.allow.inline.to.replace.global = false
-#velocimacro.permissions.allow.inline.local.scope = false
-#velocimacro.context.localscope = false
-
-runtime.references.strict = true
-runtime.strict.math = true
-
-#tools.view.servlet.layout.directory = layout/
-#tools.view.servlet.layout.default.template =  Default.vm
-#tools.view.servlet.error.template = Error.vm
