@@ -1,0 +1,16 @@
+# $Id$
+
+spring.main.banner-mode: off
+spring.main.headless: false
+spring.main.log-startup-info: false
+
+spring.thymeleaf.cache: false
+
+logging.path: ${user.home}/.upnp/log
+logging.file.max-size: 65536
+logging.file.max-history: 8
+
+management.server.address: 127.0.0.1
+management.server.port: 8081
+management.endpoints.enabled-by-default: true
+management.endpoints.web.exposure.include: *
